fix: Fixed the problem of misalignment between menu item icons and text

--- a/templates/default/assets/css/global.css
+++ b/templates/default/assets/css/global.css
@@ -123,6 +123,16 @@ a:hover {
     color: var(--primary-color);
 }
 
+.main-menu-item {
+    display: inline-block;
+    white-space: nowrap;
+}
+
+.main-menu-item i,
+.main-menu-item a {
+    display: inline-block;
+}
+
 .main-menu-link {
     margin-right: 10px;
 }
